Add robot programming example and update ML notes
Added new in-class code example for Robot Programming (22-10-2025) including CMake configuration, source, and build files. Updated Machine Learning LaTeX source to clarify maximum likelihood hypothesis notation and regenerated the PDF.

--- a/Machine Learning/LatexSourceFile/MachineLearning.tex
+++ b/Machine Learning/LatexSourceFile/MachineLearning.tex
@@ -1102,9 +1102,10 @@ Let's now consider an example with a continuous hypothesis space\begin{align}
     &\Prob(c|h_\theta)=\theta\\
     &\Prob(l|h_\theta)=1-\theta
 \end{align}
-the maximum likelihood hypothesis is\begin{equation}
+the \textbf{maximum likelihood hypothesis} is\begin{equation}
     h_{ML}=\arg\max_{\theta\in[0,1]}\Prob(D|h_\theta)
 \end{equation}
+where with $\Prob(D|h_\theta)$ we denote the \redText{ TODO }
 for the properties of the arg max function, this value is equal to
 \begin{equation}
     h_{ML}=\arg\max_{\theta\in[0,1]}L(D,h_\theta)
